# werewolf-web-services

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
jsons/: role-config.json
migrations/2021-10-18-091948_create-users-table/: up.sql
migrations/2021-11-15-155210_create-user-table/: up.sql
migrations/2021-11-28-085841_create-chat-database/: down.sql  up.sql
migrations/2021-12-04-152058_user_channel_unique_constraint/: up.sql
migrations/2021-12-10-161408_create-game-database/: down.sql  up.sql
migrations/2021-12-12-113109_delete-chatlines-when-channel-deleted/: up.sql
migrations/2021-12-13-032815_add-reply-to-message/: down.sql  up.sql
migrations/2021-12-13-043324_remove-game-stopped/: up.sql
src/: auth.rs  config.rs  db.rs  error.rs  errors.rs  lib.rs  main.rs  schema.rs  ws.rs
src/db/: channel.rs  game.rs  mod.rs  user.rs  users.rs
src/models/: channel.rs  game.rs  mod.rs  user.rs
src/routes/: user.rs  users.rs
src/ws/: cmd_parser.rs  game_cmds.rs  message_handler.rs  mod.rs  services.rs  ws.rs
src/ws/game/: cmds.rs  game.rs  game_loop.rs  mod.rs  next.rs  text_templates.rs
src/ws/game/characters/: bettrayer.rs  cupid.rs  fox.rs  guard.rs  lycan.rs  mod.rs  player.rs  seer.rs  superwolf.rs  villager.rs  werewolf.rs  witch.rs
