[package]
name = "werewolf_services"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3"
futures = "0.3.17"
serde = "1"
serde_json = "1"
dotenv = "0.15.0"
env_logger = "0.9.0"
rs-snowflake = "0.5.0"
jsonwebtoken = "7.2.0"
rust-crypto = "0.2.36"
chrono = "0.4.19"

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "r2d2", "chrono"]
